	  http://bugs.gentoo.org/show_bug.cgi?id=287186
	- Fix some false error messages about variables calling themselves.
	  Thanks again to Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	  for analyzing this terrible spaghetti-recursion code.
	  http://bugs.gentoo.org/show_bug.cgi?id=287288
	- Fix bestslotupgradeversions{,*} (in 0.18.1 it worked like
	  bestslotversions{,*}).

*eix-0.18.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow also properties and variable names on the right-hand side
	  of comparisons or runtime variable assignments.
	- Store/show +- of IUSE.
	- Change iuse/use output for --xml to reflect the new available data.
	  Thanks to Bob Shaffer II <bob.shaffer.2 at gmail.com>
	- Document the XML output format.
	- Introduce {havecolliuse}
	- Fix defaults in formatstrings (particularly for eix-diff).
	- Fix manpage: Add some forgotten properties.
	- Fix possible overflow in string assignment/comparison.
	- Improve parsing of <*:*>.
	- Fix implementation of -q which was broken in a subtle way.
	- Use fseek/ftell on systems without fseeko/ftello, and
	- improve error messages for failed permission tests,
	  for both see http://bugs.gentoo.org/show_bug.cgi?id=286229
	- ./configure: --with-null-device, get default EPREFIX by portageq.
	- Fix bug in variable parsing for --xml. Thanks to
	  Bob Shaffer II <bob.shaffer.2 at gmail.com>

*eix-0.18.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- XML output was implemented by
	  Bob Shaffer II <bob.shaffer.2 at gmail.com>
	  Thanks for the contribution.
	- Introduce runtime variables in format-string:
	  Now the format-string is almost a programming language;
	  without loops or recursion, but one can loop over versions:
	- Finally, dump the mess with available*/best*/installed*/empty*/full*
	  and the distinction of printable and "test-only" properties.
	  Instead of the flood of variations of properties for version output