@@ -274,6 +274,8 @@ class Scanner {
 			PKG_BESTRECOMMEND,
 			PKG_BESTRECOMMENDORINSTALL,
 			PKG_MARKED,
+			PKG_SLOTTED,
+			PKG_HAVESLOT,
 			PKG_HAVECOLLIUSE,
 			PKG_COLLIUSE,
 			PKG_HAVEVERSIONUSE,
@@ -400,6 +402,8 @@ class Scanner {
 			prop_pkg("bestrecommend", PKG_BESTRECOMMEND);
 			prop_pkg("bestrecommendorinstall", PKG_BESTRECOMMENDORINSTALL);
 			prop_pkg("marked", PKG_MARKED);
+			prop_pkg("slotted", PKG_SLOTTED);
+			prop_pkg("haveslot", PKG_HAVESLOT);
 			prop_pkg("havecolliuse", PKG_HAVECOLLIUSE);
 			prop_pkg("colliuse", PKG_COLLIUSE);
 			prop_pkg("haveversionuse", PKG_HAVEVERSIONUSE);
@@ -728,6 +732,14 @@ PrintFormat::get_pkg_property(const Package *package, const string &name) const 
 				if(marked_list->is_marked(*package))
 					return one;
 			}
+			break;
+		case Scanner::PKG_SLOTTED:
+			if((package->slotlist()).size() > 1)
+				return one;
+			break;
+		case Scanner::PKG_HAVESLOT:
+			if(package->have_nontrivial_slots())
+				return one;
 			break;
 		case Scanner::PKG_HAVECOLLIUSE:
 			if(package->iuse.empty())
